# glfw-3d-engine

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  vcpkg.json
.github/workflows/: cmake.yaml  linux.yaml  macos.yaml  release.yaml  windows-clang.yaml  windows.yaml
assets/shaders/: block.frag  fragment.frag  texture_light.vert  texture_vertex.vert  vertex.vert
cmake/: assets.cmake  dependencies.cmake
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
docs/Doxygen/: Doxyfile
docs/Sphinx/source/: conf.py  index.rst
src/: CMakeLists.txt  config.h  main.cpp
src/blocks/: BlockTextures.cpp  BlockTextures.h  block.cpp  block.h  blocks.cpp  blocks.h
src/engine/: BlockSelector.cpp  BlockSelector.h  InputLoop.cpp  InputLoop.h  camera.cpp  camera.h  crosshair.cpp  crosshair.h  engine.h  transform.cpp
src/engine/resources/: ResourceLocation.cpp  ResourceLocation.h  TextureResource.cpp  TextureResource.h  resource.cpp  resource.h
src/files/: file.cpp  file.h
src/graphics/: BlockRenderer.cpp  BlockRenderer.h  LineBatch.cpp  LineBatch.h  atlas.cpp  atlas.h  mesh.cpp  mesh.h  quad.cpp  quad.h  shader.cpp  shader.h  texture.cpp  triangle.cpp  triangle.h
src/gui/: gui.cpp
src/include/: InputLoop.h  app.h  camera.h  events.h  file.h  gui.h  shader.h  texture.h  transform.h  triangle.h  vec.h  window.h
src/loaders/image/: png_loader.cpp  png_loader.h
src/modules/: InputLoop.cpp  app.cpp  camera.cpp  events.cpp  file.cpp  gui.cpp  shader.cpp  texture.cpp  transform.cpp  triangle.cpp  vec.cpp  window.cpp
src/ui/: gui.cpp  gui.h
src/window/: camera.cpp  events.cpp  events.h  window.cpp  window.h
src/world/: chunk.cpp  chunk.h  chunks.cpp  chunks.h  generation.cpp  generation.h  world.cpp  world.h
